# cryptoMonitor

./: .gitignore  AI_Model_Audit_2026-04-17.md  AI_Model_Critique_Synthesis.md  Crypto_AI_Monitor_Full_Specs.md  README.md  full_diff.txt  multi_model_audit_report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  replit.nix  site1(19).PublishSettings
attached_assets/: Pasted-1-What-the-bots-agree-on-right-now-has-conflicting-prob_1776949415131.txt  Pasted-Accept-the-diagnosis-Do-not-flip-flags-Do-not-unarchive_1777497330074.txt  Pasted-BTC-yes-ETH-no-for-now-Proceed-with-Task-C-only-for-bit_1777559437382.txt  Pasted-Best-path-is-use-LLMs-for-context-not-for-price-predict_1776762545173.txt  Pasted-Bots-made-lost-3-685-0-028-on-13000-00-capital-Buy-hold_1776518194468.txt  Pasted-Build-this-as-a-real-adaptive-crypto-prediction-system-_1776867496056.txt  Pasted-Command-Center-Live-Cycle-2088-Analyzing-all-agents-now_1776594512276.txt  Pasted-Create-a-Plan-mode-task-for-the-next-decision-point-Tas_1777555709080.txt  Pasted-Create-a-follow-up-task-to-give-the-Meta-Brain-read-onl_1776969308600.txt  Pasted-Create-a-new-research-task-Calculate-Best-Gate-Values-f_1777533363898.txt  Pasted-Create-and-execute-the-next-recovery-task-based-on-Task_1777037685092.txt  Pasted-Create-the-next-implementation-task-to-remove-the-LLM-f_1776889509437.txt  Pasted-Current-priority-keep-the-system-truthful-functional-an_1777384492457.txt  Pasted-Do-not-add-new-features-yet-Task-now-is-to-treat-the-me_1776961329103.txt  (+47 more)
audit/: archived_models.legacy.json  (+6 more)
(+4011 files in other folders)
