[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "joblib>=1.4.0",
    "lightgbm>=4.5.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-json-logger>=4.1.0",
    "scikit-learn>=1.5.0",
    "uvicorn[standard]>=0.44.0",
]
